tests/fail/t9.hir
// 9 : an empty file (main is required)

